<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="description_post_author_avatar">avatar author</string>
    <string name="description_menu">3 dots</string>
    <string name="description_post_share">share_count</string>
    <string name="descriotion_heart_image">Likes</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Empty post</string>
    <string name="description_post_like">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="editing_text">Editing</string>
    <string name="cancelEditDescription">Cancel editing</string>
    <string name="description_post_views">Views</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Post save</string>
    <string name="add_description">Add post</string>
  <string name="play_button_description">Play button</string>
    <string name="description_placeholder">Placeholder</string>
</resources>