<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/post_card_layout"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/common_spacing">

  <TextView
    android:id="@+id/author"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:ellipsize="end"
    android:maxLines="1"
    app:layout_constraintBottom_toTopOf="@id/published"
    app:layout_constraintEnd_toStartOf="@id/menu"
    app:layout_constraintStart_toEndOf="@id/avatar"
    app:layout_constraintTop_toTopOf="@id/avatar"
    app:layout_constraintVertical_chainStyle="packed"
    android:text="@string/author" />

  <TextView
    android:id="@+id/published"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:text="@string/published"
    app:layout_constraintBottom_toBottomOf="@id/avatar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/avatar"
    app:layout_constraintTop_toBottomOf="@id/author" />

  <ImageView
    android:id="@+id/avatar"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:contentDescription="@string/description_post_author_avatar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/netology" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/menu"
    style="@style/Widget.App.Button.Menu"
    app:icon="@drawable/baseline_more_vert_24"
    app:singleSelection = "true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/description_menu"
    app:layout_constraintStart_toEndOf="@id/author"
    app:layout_constraintTop_toTopOf="@id/avatar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/published"
    app:iconPadding="0dp"/>

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/headerBarrier"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:barrierMargin="@dimen/common_spacing"
    app:constraint_referenced_ids="avatar,published,menu" />

  <TextView
    android:id="@+id/content"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:autoLink="all"
    android:text="@string/content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/footer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="content" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/likes"
    style="@style/Widget.App.Button.Like"
    app:icon="@drawable/ic_like_selector"
    android:checkable="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_spacing"
    android:contentDescription="@string/description_post_like"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/footer" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/share"
    style="@style/Widget.App.Button.Share"
    app:icon="@drawable/share_variant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_spacing"
    android:contentDescription="@string/description_post_share"
    app:layout_constraintStart_toEndOf="@id/likes"
    app:layout_constraintTop_toBottomOf="@id/footer" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/views"
    style="@style/Widget.App.Button.View"
    app:icon="@drawable/eye"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_spacing"
    android:contentDescription="@string/description_post_views"
    app:layout_constraintTop_toBottomOf="@id/footer"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>